1. 研究边框渐变动画

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -251,6 +251,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
+            android:layout_margin="4dp"
             android:gravity="center" />
     </LinearLayout>
 </ScrollView>
