--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -35,6 +35,7 @@
                     android:id="@+id/common_media_cover"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_80"
+                    android:gravity="center"
                     android:contentDescription="@null" />
             </RelativeLayout>
 
