--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -120,11 +120,15 @@
             android:text="原生" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/native_banner_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center" />
+        android:gravity="center">
+
+        <RelativeLayout
+            android:id="@+id/native_banner_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center" />
+    </LinearLayout>
 </LinearLayout>
