1. 图片scaleType修改为fitCenter

--- a/app/src/main/res/layout/ad_common_native_card_large.xml
+++ b/app/src/main/res/layout/ad_common_native_card_large.xml
@@ -30,7 +30,7 @@
                     <ImageView
                         android:id="@+id/common_image_cover"
                         android:contentDescription="@null"
-                        android:scaleType="fitXY"
+                        android:scaleType="fitCenter"
                         app:layout_aspectRatio="190%"
                         app:layout_widthPercent="100%" />
 
