--- a/app/src/main/res/layout/ad_common_native_card_medium.xml
+++ b/app/src/main/res/layout/ad_common_native_card_medium.xml
@@ -32,7 +32,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@null"
-                        android:scaleType="fitXY"
+                        android:scaleType="fitCenter"
                         app:layout_aspectRatio="190%"
                         app:layout_widthPercent="100%" />
 
