--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_80"
                     android:contentDescription="@null"
-                    android:scaleType="fitXY" />
+                    android:scaleType="fitCenter" />
 
                 <RelativeLayout
                     android:id="@+id/common_media_cover"
