--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -26,8 +26,8 @@
                 android:id="@+id/ad_sdk_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:tag="ad_sdk_spinner"
-                android:entries="@array/ad_sdk" />
+                android:entries="@array/ad_sdk"
+                android:tag="ad_sdk_spinner" />
         </LinearLayout>
 
 
@@ -47,8 +47,8 @@
                 android:id="@+id/ad_layout_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:tag="ad_layout_spinner"
-                android:entries="@array/ad_layout" />
+                android:entries="@array/ad_layout"
+                android:tag="ad_layout_spinner" />
         </LinearLayout>
 
         <LinearLayout
@@ -57,18 +57,38 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="横幅大小" />
-
-            <Spinner
-                android:id="@+id/ad_banner_size_spinner"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:tag="ad_banner_size_spinner"
-                android:entries="@array/ad_banner_size" />
+                android:layout_marginRight="2dp"
+                android:layout_weight="4"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:gravity="center_vertical"
+                    android:text="横幅大小" />
+
+                <Spinner
+                    android:id="@+id/ad_banner_size_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:entries="@array/ad_banner_size"
+                    android:tag="ad_banner_size_spinner" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/mediation_debugger"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="调试" />
         </LinearLayout>
     </LinearLayout>
 
