--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -100,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:gravity="center"
-                android:text="Advertisement"
+                android:text="@string/advertisement"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
