--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -27,27 +27,47 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="2"
                         android:gravity="center_vertical"
-                        android:text="@string/ad_platform" />
+                        android:text="@string/ad_platform"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/dp_12"
+                        android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/ad_sdk_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:entries="@array/ad_sdk"
+                        android:layout_weight="1"
                         android:tag="ad_sdk_spinner" />
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/change_language"
-                    android:layout_width="72dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="2dp"
-                    android:layout_weight="0"
-                    android:onClick="onClick"
-                    android:text="@string/change_language" />
+                    android:layout_weight="4"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:gravity="center_vertical"
+                        android:text="@string/banner_size"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/dp_12"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:id="@+id/ad_banner_size_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:tag="ad_banner_size_spinner" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -59,74 +79,58 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_36"
-                    android:layout_marginRight="2dp"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="2"
                         android:gravity="center_vertical"
-                        android:text="@string/native_layout" />
+                        android:text="@string/native_layout"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/dp_12"
+                        android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/ad_layout_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:entries="@array/ad_layout"
+                        android:layout_weight="1"
+                        style="@android:style/Widget.DeviceDefault.Spinner"
                         android:tag="ad_layout_spinner" />
                 </LinearLayout>
 
-                <Switch
-                    android:id="@+id/mediation_template"
-                    style="@android:style/Widget.DeviceDefault.Button"
-                    android:layout_width="72dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="2dp"
-                    android:layout_weight="0"
-                    android:drawablePadding="0dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_36"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="2dp"
-                    android:layout_weight="4"
-                    android:gravity="center_vertical"
+                    android:layout_height="@dimen/dp_36"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:gravity="center_vertical"
-                        android:text="@string/banner_size" />
-
-                    <Spinner
-                        android:id="@+id/ad_banner_size_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:entries="@array/ad_banner_size"
-                        android:tag="ad_banner_size_spinner" />
-                </LinearLayout>
+                        android:layout_weight="2"
+                        android:gravity="center_vertical"
+                        android:text="@string/template"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/dp_12"
+                        android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/mediation_debugger"
-                    android:layout_width="72dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="2dp"
-                    android:layout_weight="0"
-                    android:onClick="onClick"
-                    android:text="@string/debug" />
+                    <Switch
+                        android:id="@+id/mediation_template"
+                        style="@android:style/Widget.DeviceDefault.Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginLeft="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="0dp" />
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -174,11 +178,32 @@
                 android:text="@string/reward_test"
                 android:textSize="@dimen/sp_12" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/change_language"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="@string/change_language" />
+
+            <Button
+                android:id="@+id/mediation_debugger"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="@string/debug" />
+
             <Button
                 android:id="@+id/native_common"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/native_test"
