--- a/app/src/main/res/layout/act_splash2.xml
+++ b/app/src/main/res/layout/act_splash2.xml
@@ -26,6 +26,12 @@
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_16" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_16"
+                android:text="@string/loading" />
         </LinearLayout>
 
         <LinearLayout
@@ -33,8 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/ad_splash_advertise_bg"
-            android:paddingTop="8dp"
             android:orientation="vertical"
+            android:paddingTop="8dp"
             android:visibility="gone">
 
             <FrameLayout
