--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/app_icon"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
+                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="4dp"
                 android:src="@mipmap/ic_launcher" />
@@ -47,6 +48,7 @@
                 android:layout_toLeftOf="@+id/right_arrow"
                 android:layout_toRightOf="@+id/app_icon"
                 android:ellipsize="end"
+                android:gravity="start|center_vertical"
                 android:maxLines="1"
                 android:text="@string/app_name"
                 android:textColor="@android:color/black"
@@ -57,8 +59,10 @@
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
                 android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:src="@drawable/next" />
